fix:docs site view on mobile

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -250,8 +250,8 @@ body {
 
   #main {
     margin: 1rem 0.5rem;
-    padding: 4rem 1rem;
-    height: calc(100vh - 5rem);
+    padding: 1rem 1rem 4rem 1rem;
+    height: calc(100vh - 10rem);
   }
 
   .menu-icon {
